minijinja/tests/snapshots/test_templates__vm@err_required_block_missing_override.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% extends \"required_layout.txt\" %}"
info: {}
input_file: minijinja/tests/inputs/err_required_block_missing_override.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "Required block 'body' not found",
    name: "required_layout.txt",
    line: 1,
}

invalid operation: Required block 'body' not found (in required_layout.txt:1)
----------------------------- required_layout.txt -----------------------------
   1 > before[{% block body required %}{% endblock %}]after
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
